--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="grade1_txt">В нашем приложении вы можете выбрать автомобиль по самой лучшей цене</string>
+    <string name="grade2_txt">В нашем приложении вы можете найти автосалон рядом со своим домом</string>
+    <string name="grade3_txt">В нашем приложении вы можете получить необходимую информацию перед выбором авто</string>
 </resources>
